--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
       </div>
     </ul>
   </div>
+</div> 
 </div>
-<!-- </div> -->
     </section>
     <script src="./src/js/index.js" type="module"></script>
   </body>
