--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
   <i class="bi bi-globe"></i>
   <p>Redes e Infraestructura</p>
     <div class="card-service-text">
-    <p>Diseñamos y mantenemos redes seguras e integramos cámaras y videovigilancia para mayor control.</p>
+      <div class="card-service-text-inner">
+        <p>Diseñamos y mantenemos redes seguras e integramos cámaras y videovigilancia para mayor control.</p>
+      </div>
  
   </div>
 </div>
@@ -116,28 +118,36 @@
   <i class="bi bi-router"></i>
   <p>Proveedor de Servicio de Interner</p>
     <div class="card-service-text">
-    <p>Conectividad estable y de alta disponibilidad con configuraciones avanzadas para tu empresa.</p>
+      <div class="card-service-text-inner">
+        <p>Conectividad estable y de alta disponibilidad con configuraciones avanzadas para tu empresa.</p>
+      </div>
   </div>
 </div>
 <div class="card-service" id="web">
   <i class="bi bi-window-sidebar"></i>
   <p>Desarrollo Web</p>
   <div class="card-service-text">
-    <p>Creamos sitios web modernos, responsivos y optimizados que reflejan la identidad de tu negocio.</p>
+    <div class="card-service-text-inner">
+      <p>Creamos sitios web modernos, responsivos y optimizados que reflejan la identidad de tu negocio.</p>
+      </div>
   </div>
 </div>
 <div class="card-service" id="sistemas">
   <i class="bi bi-gear"></i>
   <p>Desarrollo de Sistemas</p>
     <div class="card-service-text">
-    <p>Automatizamos tus procesos con sistemas a medida que mejoran la productividad y el control interno.</p>
+      <div class="card-service-text-inner">
+        <p>Automatizamos tus procesos con sistemas a medida que mejoran la productividad y el control interno.</p>
+      </div>
   </div>
 </div>
 <div class="card-service" id="consultoria">
   <i class="bi bi-rocket-takeoff"></i>
   <p>Consultoria Tecnologica</p>
     <div class="card-service-text">
-    <p>Te guiamos en la adopción de nuevas tecnologías y estrategias digitales para optimizar tu negocio.</p>
+      <div class="card-service-text-inner">
+        <p>Te guiamos en la adopción de nuevas tecnologías y estrategias digitales para optimizar tu negocio.</p>
+      </div>
   </div>
 </div>
       </div>
