--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    
+
     <title>WEBNET</title>
   </head>
   <body>
@@ -165,6 +165,24 @@
       </div>
     </section>
 
+    <section class="seccion-info" id="mas-informacion">
+      <div class="contenedor-info">
+        <h2>¿Quieres saber más sobre nuestra consultora?</h2>
+        <p>
+          Descarga nuestro pdf informativo con todos los detalles sobre los
+          servicios, proyectos y valores que nos definen como tu aliado
+          tecnológico.
+        </p>
+        <a
+          href="./src/assets/pfd/NETWEB.pdf"
+          download
+          class="btn-descarga"
+        >
+          <i class="bi bi-file-earmark-arrow-down"></i> Descargar PDF
+        </a>
+      </div>
+    </section>
+
     <section class="seccion-cuatro" id="contacto">
       <div class="container-information-contacto">
         <ul>
@@ -202,7 +220,7 @@
         <div class="icon-contacto">
           <i class="bi bi-person-circle"></i>
         </div>
-        <form class="form-contacto"  id="form_contacto">
+        <form class="form-contacto" id="form_contacto">
           <div class="div-contacto-name-lastname">
             <div class="div-contacto-name">
               <label for="div_nombres" class="form-label"
