--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           tecnológico.
         </p>
         <a
-          href="/src/assets/pfd/NETWEB.pdf"
+          href="/assets/pfd/NETWEB.pdf"
           download
           class="btn-descarga"
         >
@@ -185,7 +185,7 @@
     </section>
 
     <section class="seccion-cuatro" id="contacto">
-      <div class="container-information-contacto">
+      <div class="container-information-contacto">  
         <ul>
           <li>
             <div class="li-div-icon">
