--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           tecnológico.
         </p>
         <a
-          href="src/assets/pfd/NETWEB.pdf"
+          href="./public/assets/pfd/NETWEB.pdf"
           download
           class="btn-descarga"
         >
