cambiamos los assets

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <header class="headers">
       <div class="logo">
-        <img src="./src/assets/img/netweb2.png" alt="" />
+        <img src="./assets/img/netweb2.png" alt="" />
       </div>
       <div class="barra-nav">
         <nav>
@@ -175,7 +175,7 @@
           tecnológico.
         </p>
         <a
-          href="./src/assets/pfd/NETWEB.pdf"
+          href="./assets/pfd/NETWEB.pdf"
           download
           class="btn-descarga"
         >
