--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./public/icono/globo.ico" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="./public/icono/globo.ico"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="./src/css/normalize.css" />
     <link rel="stylesheet" href="./src/css/styles.css" />
     <link
@@ -16,7 +20,7 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-    <title>WEBNET</title>
+    <title>NETWEB</title>
   </head>
   <body>
     <header class="headers">
@@ -174,11 +178,7 @@
           servicios, proyectos y valores que nos definen como tu aliado
           tecnológico.
         </p>
-        <a
-          href="./assets/pfd/NETWEB.pdf"
-          download
-          class="btn-descarga"
-        >
+        <a href="./assets/pfd/NETWEB.pdf" download class="btn-descarga">
           <i class="bi bi-file-earmark-arrow-down"></i> Descargar PDF
         </a>
       </div>
@@ -283,13 +283,19 @@
           <img src="./src/assets/img/netweb2.png" alt="" />
         </div>
         <div class="footer-text">
-          <p>© 2024 NETWEB. Todos los derechos reservados.</p>
+          <p>© 2025 NETWEB. Todos los derechos reservados.</p>
         </div>
         <div class="footer-redes">
-          <a href="#"><i class="bi bi-facebook"></i></a>
-          <a href="#"><i class="bi bi-twitter"></i></a>
-          <a href="#"><i class="bi bi-linkedin"></i></a>
-          <a href="#"><i class="bi bi-instagram"></i></a>
+          <a href="#" class="anchor-facebook"><i class="bi bi-facebook"></i></a>
+          <a href="#" class="anchor-twitter"><i class="bi bi-twitter"></i></a>
+          <a href="#" class="anchor-linkedin"><i class="bi bi-linkedin"></i></a>
+          <a href="#" class="anchor-instagram"
+            ><i class="bi bi-instagram"></i
+          ></a>
+          <a href="tel:22-12-30-10-84" class="anchor-phone-one"
+            ><i class="bi bi-phone-fill"></i
+          ></a>
+          <!-- <a href="tel:22-12-30-10-84"><i class="bi bi-phone-fill anchor-phone-two"></i></a> -->
         </div>
       </div>
     </footer>
